# qt-mqtt-build-from-sources

./: .gitignore  CMakeLists.txt  README.md
TestQtMQTT/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
